fixed the godot logo on left side not centered
added display flex justify-content center and align items center on the <a> elements

--- a/GameDev.css
+++ b/GameDev.css
@@ -73,6 +73,13 @@
     margin-bottom: 1%;
 }
 
+.main-tab > .top > .left-side > .godot-logo-container > a
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .main-tab > .top > .left-side > .godot-logo-container > a > img
 {
     width: 70%;
